--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -13,23 +13,23 @@ p {
 }
 
 .inner-section {
-  @media (max-width: 600px) {
+  @media screen and (max-width: 600px) {
     max-width: 100%;
     margin: 0 auto;
     padding: 24px;
   }
   //small
-  @media (max-width: 960px) {
+  @media screen and (min-width: 601px) {
     max-width: 100%;
     margin: 0 auto;
   }
   //medium
-  @media (max-width: 1264px) {
+  @media screen and (min-width: 960px) {
     max-width: 960px;
     margin: 0 auto;
   }
   //large and x-large
-  @media (min-width: 1265px) {
+  @media screen and (min-width: 1264px) {
     max-width: 1200px;
     margin: 0 auto;
   }
