--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -15,23 +15,23 @@ p {
 .inner-section {
   @media screen and (max-width: 600px) {
     max-width: 100%;
-    margin: 0 auto;
+    margin: 24px auto;
     padding: 24px;
   }
   //small
   @media screen and (min-width: 601px) {
     max-width: 100%;
-    margin: 0 auto;
+    margin: 72px auto;
   }
   //medium
   @media screen and (min-width: 960px) {
     max-width: 960px;
-    margin: 0 auto;
+    margin: 72px auto;
   }
   //large and x-large
   @media screen and (min-width: 1264px) {
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 72px auto;
   }
 }
 
