--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -5,7 +5,7 @@
 
 $body-font-family: "Poppins", sans-serif;
 $material-light: (
-  "background": #000000,
+  "background": #eeeeee,
   //   "background-image": linear-gradient(160deg, #0093e9 0%, #80d0c7 100%)
 );
 
